# 2024_Experiments

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  initial_data.csv  message.csv
lib/: CMakeLists.txt  formula_parser.cpp  formula_parser.h  manager.cpp  manager.h  module.cpp  module.h  parser_ast.h  parser_expression.h  plot.h  strategyIO.cpp  strategyIO.h  variable.cpp  variable.h  variable_data.cpp  variable_data.h
lib/IO/: strategyIO.cpp  strategyIO.h
lib/manager/: manager.cpp  manager.h
lib/manager/variable/: variable.cpp  variable.h
lib/parser/: formula_parser.h  parser_ast.h  parser_expression.h
lib/sqlite_database/: db_form.cpp  db_form.h  db_form.ui  sqlite.cpp  sqlite.h
lib/table_models/: errors_table.cpp  measurements_table.cpp  measurements_table.h  naming_table.cpp  plot_settings_table.cpp  plot_settings_table.h
lib/table_models/delegates/: color_delegate.cpp  combobox_delegate.cpp  combobox_delegate.h
main/: CMakeLists.txt  Theme.qss  addcalculateddialog.cpp  addcalculateddialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  measurements_table.cpp  measurements_table.h  options.cpp  options.h
main/calculated/: addcalculateddialog.cpp  addcalculateddialog.h  addcalculateddialog.ui
main/implementer/: implementer.cpp  implementer.h
main/implementer/odf/: odf_form.cpp  odf_form.ui
main/implementer/odf/block/: block.cpp  block.h  plot_block.cpp  plot_block.h  table_block.cpp  text_block.cpp
main/implementer/sqlite/: db_form.h  db_form.ui  sqlite.cpp  sqlite.h
main/manager_odf/: manager_odf.cpp  manager_odf.h  odf_form.cpp  odf_form.h  odf_form.ui
main/manager_odf/block/: block.cpp  block.h  plot_block.cpp  table_block.cpp  table_block.h  text_block.cpp  text_block.h
main/plot_models/: abstractplotmodel.h  column_plot.cpp  column_plot.h  combo_plot.cpp  combo_plot.h  dot_plot.cpp  dot_plot.h  histogram.cpp  histogram.h  histogram_2d.cpp  histogram_2d.h  line_plot.cpp  line_plot.h  options.cpp  options.h  options.ui  options_histogram.cpp  options_histogram.h  options_histogram.ui  options_histogram_2d.cpp  options_histogram_2d.h  options_histogram_2d.ui  options_scatter_2d.cpp  options_scatter_2d.h  options_scatter_2d.ui  plot.cpp  plot.h  scatter_plot.cpp  scatter_plot.h  scatter_plot_2d.cpp  scatter_plot_2d.h  sctatter_plot_2d.h
main/table_models/: errors_table.cpp  errors_table.h  measurements_table.cpp  measurements_table.h  naming_table.cpp  naming_table.h  plot_settings_table.cpp  plot_settings_table.h
main/table_models/delegates/: color_delegate.cpp  color_delegate.h  combobox_delegate.cpp  combobox_delegate.h
qcustomplot_lib/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp  module_test.cpp  parser_tests.cpp  test_module.cpp  test_module.h
